--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,37 @@
-asgiref==3.3.4
-dj-database-url==0.5.0
-Django==3.2.4
-django-heroku==0.3.1
-gunicorn==20.1.0
-psycopg2==2.9.1
-pytz==2021.1
-sqlparse==0.4.1
-whitenoise==5.2.0
+appdirs==1.4.4
+asgiref==3.2.10
+astroid==2.4.2
+Brotli==1.0.9
+click==7.1.2
+colorama==0.4.3
+dash==1.19.0
+dash-core-components==1.15.0
+dash-html-components==1.1.2
+dash-renderer==1.9.0
+dash-table==4.11.2
+distlib==0.3.0
+Django==3.0.7
+filelock==3.0.12
+Flask==1.1.2
+Flask-Compress==1.9.0
+future==0.18.2
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.3
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+numpy==1.20.1
+pandas==1.2.2
+plotly==4.14.3
+pylint==2.5.3
+python-dateutil==2.8.1
+pytz==2020.1
+retrying==1.3.3
+six==1.15.0
+sqlparse==0.3.1
+toml==0.10.1
+virtualenv==20.0.24
+virtualenvwrapper-win==1.2.6
+Werkzeug==1.0.1
+wrapt==1.12.1
